[package]
name = "po8-load-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
po8-crypto = { path = "../crypto" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
sha3 = "0.10"






